# knowbot-ai

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
knowbot_ai/: main.py
