[tool.poetry]
name = "knowbot_ai"
version = "0.1.0"
description = ""
authors = ["daniel.vazquez-silva <daniel.vazquez-silva@darkwolfsolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"
openai = "^1.6.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
